iks/allow-traffic-from-my-ip.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-traffic-from-my-ip
  # allow traffic from your system's IP to the ALB IP address and port
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Allow
    destination:
      nets:
      # IPs of (ALB) Automatic Load Balancer (a.k.a Ingress)
      # CLI: kubectl get ingress
      - 169.50.19.214/32
      - 161.156.130.142/32
      - 149.81.67.38/32
      ports:
      - 80
      - 443
    protocol: TCP
    source:
      nets:
      -  78.207.202.120/32
      ports:
      - 80
      - 443
  selector: ibm.role == 'worker_public'
  order: 2000
  types:
  - Ingress
