iks/deny-alb-cfee3.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  # Deny all incoming TCP traffic from any source IP to the ALB IP address and port
  name: deny-alb-traffic
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Deny
    destination:
      nets:
      # IPs of (ALB) Automatic Load Balancer (a.k.a Ingress)
      # CLI: dig <cluster-name>.eu-de.containers.appdomain.cloud
      - 158.177.180.90/32
      - 161.156.120.78/32
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  selector: ibm.role == 'worker_public'
  order: 4000
  types:
  - Ingress
